--- a/src/css/consulta_desktop.css
+++ b/src/css/consulta_desktop.css
@@ -168,8 +168,10 @@ main {
 
   .mapa__layout {
     display: flex;
-    width: 100%;
+    width: 80%;
     justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
     margin-top: 2rem;
 
     .mapa__layout--grafico {
