--- a/src/views/cuenta_suministrador.html
+++ b/src/views/cuenta_suministrador.html
@@ -29,54 +29,110 @@
       <i></i>
     </header>
     <main>
+      <section class="informacion">
+        <section class="informacion__logo">
+          <img src="../../public/images/logo_electrocre.png" alt="" />
+          <span class="loader"></span>
+        </section>
+        <section class="informacion__personal">
+          <section class="informacion__personal--bienvenida">
+            <h1>Hola José Antonio,</h1>
+            <p>tu rol es Suministrador</p>
+          </section>
+          <section class="informacion__personal--registro">
+            <section class="columnaUno">
+              <p class="columnaUno__label">Nombre(s)</p>
+              <p>José Antonio Medina Martínez</p>
+              <p class="columnaUno__label abajo">Razón Social</p>
+              <p>La Gasolinera SA CV</p>
+            </section>
+            <section class="columnaUno">
+              <p class="columnaUno__label">Teléfono</p>
+              <p>5627722324</p>
+              <p class="columnaUno__label abajo">Correo Electronico</p>
+              <p>joseamm@comunidad.unam.mx</p>
+            </section>
+          </section>
+        </section>
+      </section>
       <section class="tabla">
+        <section class="tabla__titulos"></section>
         <section class="tabla__botones">
-          <a href="">Ver Reportes Anteriores</a>
           <section class="tabla__botones--filtro">
-            <p>Filtrar por: </p>
-            <select name="" id="">
+            <p>Filtrar por:</p>
+            <select name="" id="filtrarAnual">
               <option value="1" selected>2024</option>
               <option value="2">2023</option>
               <option value="3">2022</option>
               <option value="4">2021</option>
             </select>
           </section>
-          <a href="">Nueva Solicitud</a>
+          <a href="">Registrar Solicitud</a>
         </section>
         <section class="tabla__grid">
           <table>
             <thead>
               <tr>
                 <th>Periodo</th>
+                <th>RPU</th>
                 <th>Latitud</th>
                 <th>Longitud</th>
-                <th>RPU</th>
               </tr>
             </thead>
-            <tbody>
+            <tbody id="2023">
               <tr>
                 <td>May/23 - Nov/23</td>
+                <td>12345678</td>
                 <td>20.783112681665266</td>
                 <td>-101.46017253379192</td>
+              </tr>
+              <tr>
+                <td>May/23 - Nov/23</td>
                 <td>12345678</td>
+                <td>20.783112681665266</td>
+                <td>-101.46017253379192</td>
+              </tr>
+              <tr>
+                <td>May/23 - Nov/23</td>
+                <td>12345678</td>
+                <td>20.783112681665266</td>
+                <td>-101.46017253379192</td>
               </tr>
               <tr>
                 <td>Ene/23 - Jul/23</td>
+                <td>12345678</td>
                 <td>20.783112681665266</td>
                 <td>-101.46017253379192</td>
+              </tr>
+              <tr>
+                <td>Ene/23 - Jul/23</td>
                 <td>12345678</td>
+                <td>20.783112681665266</td>
+                <td>-101.46017253379192</td>
+              </tr>
+              <tr>
+                <td>Ene/23 - Jul/23</td>
+                <td>12345678</td>
+                <td>20.783112681665266</td>
+                <td>-101.46017253379192</td>
               </tr>
               <tr>
                 <td>Jul/23 - Dic/23</td>
+                <td>12345678</td>
                 <td>20.783112681665266</td>
                 <td>-101.46017253379192</td>
+              </tr>
+              <tr>
+                <td>Jul/23 - Dic/23</td>
                 <td>12345678</td>
+                <td>20.783112681665266</td>
+                <td>-101.46017253379192</td>
               </tr>
               <tr>
                 <td>May/23 - Nov/23</td>
+                <td>12345678</td>
                 <td>20.783112681665266</td>
                 <td>-101.46017253379192</td>
-                <td>12345678</td>
               </tr>
             </tbody>
           </table>
