--- a/src/views/registrar_infraestructura.html
+++ b/src/views/registrar_infraestructura.html
@@ -30,94 +30,97 @@
     </header>
     <main>
       <section class="formulario">
-        <p class="formulario__separadoresTitulo">Datos del Usuario Final</p>
-        <span></span>
-
-        <section class="formulario__treColumnas">
-          <section class="formulario__treColumnas--inputText">
-            <p>Apellido Paterno</p>
-            <input type="text" name="" id="" />
-          </section>
-          <section class="formulario__treColumnas--inputText">
-            <p>Apellido Materno</p>
-            <input type="text" name="" id="" />
-          </section>
-          <section class="formulario__treColumnas--inputText">
-            <p>Nombre(s)</p>
-            <input type="text" name="" id="" />
-          </section>
+        
+        <section class="formulario__separadoresTitulo">
+          <p>1. Datos del Usuario Final. *</p>
         </section>
-
-        <p class="formulario__separadores">
-          Datos de contacto para oír y recibir notificaciones
-        </p>
-        <span></span>
-
-        <section class="formulario__treColumnas">
-          <section class="formulario__treColumnas--inputText">
-            <p>Correo electronico:</p>
-            <input type="text" name="" id="" />
+        
+        <section class="formulario__contenedorInputs" id="datosUsuario">
+          <section class="formulario__tresColumnas">
+            <section class="formulario__tresColumnas--inputText">
+              <p>Apellido Paterno</p>
+              <input type="text" name="" id="" />
+            </section>
+            <section class="formulario__tresColumnas--inputText">
+              <p>Apellido Materno</p>
+              <input type="text" name="" id="" />
+            </section>
+            <section class="formulario__tresColumnas--inputText">
+              <p>Nombre(s)</p>
+              <input type="text" name="" id="" />
+            </section>
           </section>
-          <section class="formulario__treColumnas--inputText">
-            <p>Teléfono:</p>
-            <input type="text" name="" id="" />
-          </section>
-        </section>
+          <p class="formulario__separadores">
+            Datos de contacto para oír y recibir notificaciones
+          </p>
+          <span></span>
 
-        <p class="formulario__separadores">
-          Datos del domicilio donde se requiere el servicio
-        </p>
-        <span></span>
+          <section class="formulario__dosColumnas">
+            <section class="formulario__dosColumnas--inputText">
+              <p>Correo electronico:</p>
+              <input type="text" name="" id="" />
+            </section>
+            <section class="formulario__dosColumnas--inputText">
+              <p>Teléfono:</p>
+              <input type="text" name="" id="" />
+            </section>
+          </section>
 
-        <section class="formulario__treColumnas">
-          <section class="formulario__treColumnas--inputText">
-            <p>Calle, no. interior, no. Exterior:</p>
-            <input type="text" name="" id="" />
-          </section>
-          <section class="formulario__treColumnas--inputText">
-            <p>Código Postal:</p>
-            <input type="text" name="" id="" />
-          </section>
-          <section class="formulario__treColumnas--inputText">
-            <p>Colonia:</p>
-            <input type="text" name="" id="" />
-          </section>
-        </section>
+          <p class="formulario__separadores">
+            Datos del domicilio donde se requiere el servicio
+          </p>
+          <span></span>
 
-        <section class="formulario__treColumnas">
-          <section class="formulario__treColumnas--inputText">
-            <p>Delegación/Municipio:</p>
-            <input type="text" name="" id="" />
+          <section class="formulario__tresColumnas">
+            <section class="formulario__tresColumnas--inputText">
+              <p>Calle, no. Exterior:</p>
+              <input type="text" name="" id="" />
+            </section>
+            <section class="formulario__tresColumnas--inputText">
+              <p>Código Postal:</p>
+              <input type="text" name="" id="" />
+            </section>
+            <section class="formulario__tresColumnas--inputText">
+              <p>Colonia:</p>
+              <input type="text" name="" id="" />
+            </section>
           </section>
-          <section class="formulario__treColumnas--inputText">
-            <p>Entidad Federativa:</p>
-            <input type="text" name="" id="" />
+
+          <section class="formulario__dosColumnas">
+            <section class="formulario__dosColumnas--inputText">
+              <p>Delegación/Municipio:</p>
+              <input type="text" name="" id="" />
+            </section>
+            <section class="formulario__dosColumnas--inputText">
+              <p>Entidad Federativa:</p>
+              <input type="text" name="" id="" />
+            </section>
           </section>
-        </section>
 
-        <p class="formulario__separadores">Coordeandas geográficas</p>
-        <span></span>
+          <p class="formulario__separadores">Coordeandas geográficas</p>
+          <span></span>
 
-        <section class="formulario__treColumnas">
-          <section class="formulario__treColumnas--inputText">
-            <p>Altitud:</p>
-            <input type="text" name="" id="" />
+          <section class="formulario__tresColumnas">
+            <section class="formulario__tresColumnas--inputText">
+              <p>Altitud:</p>
+              <input type="text" name="" id="" />
+            </section>
+            <section class="formulario__tresColumnas--inputText">
+              <p>Latitud:</p>
+              <input type="text" name="" id="" />
+            </section>
           </section>
-          <section class="formulario__treColumnas--inputText">
-            <p>Latitud:</p>
-            <input type="text" name="" id="" />
-          </section>
-        </section>
 
-        <p class="formulario__separadores">
-          Registro de Usuario (RMU/RPU cuando aplique)
-        </p>
-        <span></span>
+          <p class="formulario__separadores">
+            Registro de Usuario (RMU/RPU cuando aplique)
+          </p>
+          <span></span>
 
-        <section class="formulario__treColumnas">
-          <section class="formulario__treColumnas--inputText">
-            <p>Usuario:</p>
-            <input type="text" name="" id="" />
+          <section class="formulario__tresColumnas">
+            <section class="formulario__tresColumnas--inputText">
+              <p>Usuario:</p>
+              <input type="text" name="" id="" />
+            </section>
           </section>
         </section>
 
@@ -150,32 +153,32 @@
           </section>
         </section>
 
-        <section class="formulario__treColumnas">
-          <section class="formulario__treColumnas--inputText">
+        <section class="formulario__tresColumnas">
+          <section class="formulario__tresColumnas--inputText">
             <p>Demanda a contratar [kW]:</p>
             <input type="text" name="" id="" />
           </section>
 
-          <section class="formulario__treColumnas--inputText">
+          <section class="formulario__tresColumnas--inputText">
             <p>Número de Fases:</p>
             <input type="text" name="" id="" />
           </section>
-          <section class="formulario__treColumnas--inputText">
+          <section class="formulario__tresColumnas--inputText">
             <p>Número de Hilos:</p>
             <input type="text" name="" id="" />
           </section>
         </section>
 
-        <section class="formulario__treColumnas">
-          <section class="formulario__treColumnas--inputText">
+        <section class="formulario__tresColumnas">
+          <section class="formulario__tresColumnas--inputText">
             <p>Tensión nominal [kV]:</p>
             <input type="text" name="" id="" />
           </section>
-          <section class="formulario__treColumnas--inputText">
+          <section class="formulario__tresColumnas--inputText">
             <p>Tensión máxima [kV]:</p>
             <input type="text" name="" id="" />
           </section>
-          <section class="formulario__treColumnas--inputText">
+          <section class="formulario__tresColumnas--inputText">
             <p>Tensión mínima [kV]:</p>
             <input type="text" name="" id="" />
           </section>
@@ -208,31 +211,31 @@
           </section>
         </section>
 
-        <section class="formulario__treColumnas">
-          <section class="formulario__treColumnas--inputText">
+        <section class="formulario__tresColumnas">
+          <section class="formulario__tresColumnas--inputText">
             <p>Número de cargadores a instalar:</p>
             <input type="text" name="" id="" />
           </section>
-          <section class="formulario__treColumnas--inputText">
+          <section class="formulario__tresColumnas--inputText">
             <p>Capacidad nominal de cada cargador:</p>
             <input type="text" name="" id="" />
           </section>
-          <section class="formulario__treColumnas--inputText">
+          <section class="formulario__tresColumnas--inputText">
             <p>Capacidad nominal total:</p>
             <input type="text" name="" id="" />
           </section>
         </section>
 
-        <section class="formulario__treColumnas">
-          <section class="formulario__treColumnas--inputText">
+        <section class="formulario__tresColumnas">
+          <section class="formulario__tresColumnas--inputText">
             <p>Marca del cargador:</p>
             <input type="text" name="" id="" />
           </section>
-          <section class="formulario__treColumnas--inputText">
+          <section class="formulario__tresColumnas--inputText">
             <p>Modelo del cargador:</p>
             <input type="text" name="" id="" />
           </section>
-          <section class="formulario__treColumnas--inputText">
+          <section class="formulario__tresColumnas--inputText">
             <p>Tipo de conector del cargador:</p>
             <select name="" id="">
               <option value="0" selected>-------------</option>
@@ -323,37 +326,34 @@
           </section>
         </section>
 
-        <p class="formulario__separadoresTitulo">
-          Precios de Energía
-        </p>
+        <p class="formulario__separadoresTitulo">Precios de Energía</p>
         <span></span>
 
-        <section class="formulario__treColumnas">
-          <section class="formulario__treColumnas--inputText">
+        <section class="formulario__tresColumnas">
+          <section class="formulario__tresColumnas--inputText">
             <p>/kWh:</p>
             <input type="text" name="" id="" />
           </section>
-          <section class="formulario__treColumnas--inputText">
+          <section class="formulario__tresColumnas--inputText">
             <p>/h:</p>
             <input type="text" name="" id="" />
           </section>
-          <section class="formulario__treColumnas--inputText">
+          <section class="formulario__tresColumnas--inputText">
             <p>/min:</p>
             <input type="text" name="" id="" />
           </section>
         </section>
-        <section class="formulario__treColumnas">
-          <section class="formulario__treColumnas--inputText">
+        <section class="formulario__tresColumnas">
+          <section class="formulario__tresColumnas--inputText">
             <p>/mensual:</p>
             <input type="text" name="" id="" />
           </section>
-          <section class="formulario__treColumnas--inputText">
+          <section class="formulario__tresColumnas--inputText">
             <p>/anual:</p>
             <input type="text" name="" id="" />
           </section>
         </section>
         <section class="formulario__boton">
-
           <a href="./cuenta_personal.html">Descargar Formulario</a>
         </section>
       </section>
