--- a/src/css/cuenta_suministrador_desktop.css
+++ b/src/css/cuenta_suministrador_desktop.css
@@ -10,6 +10,8 @@
   --color-beige: #fdebae;
   --color-dorado: #bc945a;
   --color-titulos: #404041;
+  --color-gris-texto: #555555c9;
+  --color-gris-opaco: #b4b4b48a;
   --color-dorado-degradado: linear-gradient(
     0deg,
     rgba(255, 255, 255, 1) 0%,
@@ -94,27 +96,110 @@ header {
 main {
   font-family: var(--font-montserrat);
 
+  .informacion {
+    display: flex;
+    flex-wrap: wrap;
+    width: 60%;
+    justify-content: space-between;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 4rem;
+
+
+    .informacion__logo {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 50%;
+
+
+      img {
+        width: 21rem;
+        height: 20rem;
+      }
+    }
+
+    .informacion__personal {
+      width: 50%;
+      min-width: 40rem;
+
+      .informacion__personal--bienvenida {
+        text-align: end;
+        h1 {
+          font-size: 4rem;
+        }
+
+        p {
+          margin-top: 0.5rem;
+          font-size: 2.5rem;
+        }
+      }
+
+      .informacion__personal--registro {
+        display: flex;
+        justify-content: space-between;
+        /* width: 50rem; */
+
+        margin-top: 2rem;
+
+        .columnaUno {
+          font-size: 1.2rem;
+
+          .columnaUno__label {
+            font-weight: 700;
+          }
+
+          .abajo {
+            margin-top: 3rem;
+          }
+        }
+
+      }
+    }
+  }
+
   .tabla {
     width: 60%;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 4rem;
+
     .tabla__botones {
       display: flex;
       justify-content: space-between;
+      margin-bottom: 2rem;
 
       .tabla__botones--filtro {
         display: flex;
-        align-content: center;
         align-items: center;
+
+        p {
+          margin-right: 1rem;
+          font-size: 1.2rem;
+          font-weight: 700;
+        }
+
+        select {
+          padding-left: 1rem;
+          padding-right: 1rem;
+          font-size: 1.7rem;
+        }
       }
       a {
-        text-decoration: none;
         padding: 1rem;
         padding-left: 2rem;
         padding-right: 2rem;
+        border: 0.2rem solid var(--color-dorado);
+        border-radius: var(--border-radius-botones);
+        font-size: 1.2rem;
+        font-weight: 700;
+        text-decoration: none;
         color: var(--color-dorado);
       }
-      select {
+
+      a:hover {
+        background-color: var(--color-dorado);
+        color: var(--color-blanco);
       }
     }
 
@@ -123,15 +208,73 @@ main {
         display: block;
         thead {
           display: block;
+          font-size: 1.3rem;
+        }
+        tbody {
+          display: block;
+          tr:hover {
+            background-color: var(--color-gris-opaco);
+          }
         }
         tr {
-          display: block;
+          display: flex;
           th {
-            display: inline-block;
             width: 25%;
+            padding-top: 1rem;
+            padding-bottom: 1rem;
+            text-align: center;
+            border-bottom: 0.2rem solid rgba(0, 0, 0, 0.185);
+          }
+          td {
+            width: 25%;
+            padding-top: 1rem;
+            padding-bottom: 1rem;
+            font-size: 1.1rem;
+            font-weight: 500;
+            text-align: center;
+            color: var(--color-gris-texto);
+            border-bottom: 0.1rem solid rgba(0, 0, 0, 0.185);
           }
         }
       }
     }
+  }
+}
+
+
+
+/* Loader */
+.loader {
+  z-index: -1;
+  position: absolute;
+  /*display: block; */
+  width: 20rem;
+  height: 20rem;
+  border: 5px solid var(--color-guinda);
+  border-radius: 50%;
+  box-sizing: border-box;
+  animation: pulse 1s linear infinite;
+}
+
+/* @keyframes scaleUp {
+  0% {
+    transform: translate(0%, 0%) scale(0);
+  }
+
+  60%,
+  100% {
+    transform: translate(0%, 0%) scale(1);
+  }
+} */
+
+@keyframes pulse {
+  0%,
+  60%,
+  100% {
+    transform: scale(1);
+  }
+
+  80% {
+    transform: scale(1.2);
   }
 }
