--- a/src/css/registrar_infrestuctura_desktop.css
+++ b/src/css/registrar_infrestuctura_desktop.css
@@ -1,112 +1,36 @@
-:root {
-  /* Colores */
-  --color-guinda: #9f2241;
-  --color-verde-fuerte: #10312b;
-  --color-verde-claro: #235b4e;
-  --color-blanco: white;
-  --color-blanco-opaco: #ffffffe5;
-  --color-azul-cielo: #007bff;
-  --color-azul-cielo-claro: #3491f5;
-  --color-beige: #fdebae;
-  --color-dorado: #bc945a;
-  --color-titulos: #404041;
-  --color-dorado-degradado: linear-gradient(
-    0deg,
-    rgba(255, 255, 255, 1) 0%,
-    rgba(188, 148, 90, 1) 65%
-  );
-
-  /* Bordes */
-  --border-radius-botones: 0.5rem;
-
-  /* Fuentes */
-  --font-montserrat: "Montserrat", sans-serif;
-}
-
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
-html {
-  overflow-x: hidden;
-  font-size: 62.5%;
-}
-
-header {
-  display: flex;
-  flex-direction: column;
-  width: 100vw;
-  background-color: var(--color-verde-fuerte);
-
-  nav {
-    display: flex;
-    width: 90vw;
-    justify-content: space-between;
-    margin: auto;
-
-    section {
-      display: flex;
-      align-items: center;
-    }
-
-    .nav--logos {
-      .Mex {
-        width: 20rem;
-      }
-
-      .CRE {
-        width: 5.4rem;
-        height: 5rem;
-        margin-left: 2rem;
-      }
-    }
-
-    .nav--tab {
-      justify-self: center;
-
-      a {
-        padding-left: 1rem;
-        padding-right: 1rem;
-        align-self: center;
-        font-family: var(--font-montserrat);
-        font-size: 1.6rem;
-        font-weight: 500;
-        text-decoration: none;
-        color: white;
-      }
-
-      a:hover {
-        text-decoration: underline;
-      }
-    }
-  }
-
-  i {
-    display: block;
-    width: 100vw;
-    height: 3rem;
-    background-color: var(--color-verde-claro);
-  }
-}
-
+@import url(./root.css);
+@import url(./header.css);
 main {
   width: 100vw;
 
   .formulario {
-    width: 80vw;
+    width: 60vw;
     max-width: 120rem;
-    margin: auto;
+    margin-left: auto;
+    margin-right: auto;
     font-family: var(--font-montserrat);
+
+    .formulario__contenedorInputs{
+      border-left: 0.1rem solid var(--color-gris-bordes);
+      border-right: 0.1rem solid var(--color-gris-bordes);
+      border-bottom: 0.1rem solid var(--color-gris-bordes);
+    }
 
     .formulario__separadoresTitulo {
       margin-top: 1rem;
+      padding: 1.5rem 0 1.5rem 0;
       font-size: 1.8rem;
       font-weight: 700;
-      text-align: center;
-      background-color: rgba(128, 128, 128, 0.161);
-      border: 0.1rem solid black;
+      text-align: start;
+      background-color: #f5f5f5;
+      border: 0.1rem solid var(--color-gris-bordes);
+
+      p{
+        padding-left: 1.5rem;
+        font-size: 1.8rem;
+        font-weight: 700;
+        text-align: start;
+      }
     }
 
     .formulario__separadores {
@@ -120,27 +44,29 @@ main {
       border-bottom: 0.1rem solid rgba(0, 0, 0, 0.442);
       margin-bottom: 1rem;
     }
-    .formulario__treColumnas {
-      width: 100%;
+    .formulario__tresColumnas {
       display: flex;
-      margin: auto;
-      .formulario__treColumnas--inputText {
+      width: 100%;
+      justify-content: space-between;
+      .formulario__tresColumnas--inputText {
         width: 30%;
         font-size: 1.6rem;
         font-weight: 500;
         input {
-          width: 80%;
+          width: 100%;
           height: 3.5rem;
-          font-size: 2rem;
-
-          background-color: #05060f0a;
-          border-radius: 0.5rem;
           padding: 0 1rem;
-          border: 2px solid transparent;
-          font-size: 1rem;
-          transition: border-color 0.3s cubic-bezier(0.25, 0.01, 0.25, 1) 0s,
-            color 0.3s cubic-bezier(0.25, 0.01, 0.25, 1) 0s,
-            background 0.2s cubic-bezier(0.25, 0.01, 0.25, 1) 0s;
+          border: 0.1rem solid var(--color-gris-bordes);
+          border-radius: 0.4rem;
+          box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+          -webkit-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+          transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+        }
+
+        input:focus{
+            border-color: #66afe9;
+            outline: 0;
+            box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(102, 175, 233, .6)
         }
 
         input[type="text"] {
@@ -173,11 +99,7 @@ main {
         }
       }
 
-      .formulario__treColumnas--inputText:hover {
-        input {
-          outline: none;
-          border-color: #05060f;
-        }
+      .formulario__tresColumnas--inputText:hover {
 
         select {
           outline: none;
