--- a/src/views/cuenta_personal.html
+++ b/src/views/cuenta_personal.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../css/cuenta_personal_desktop.css" />
-    <title>Cuenta Personal | ElectroCRE</title>
+    <title>Cuenta Suministrador | ElectroCRE</title>
   </head>
   <body>
     <header>
@@ -37,7 +37,7 @@
         <section class="informacion__personal">
           <section class="informacion__personal--bienvenida">
             <h1>Hola José Antonio,</h1>
-            <p>estás en tu Cuenta Personal ElectroCRE</p>
+            <p>tu rol es Propietario</p>
           </section>
           <section class="informacion__personal--registro">
             <section class="columnaUno">
@@ -46,40 +46,78 @@
               <p class="columnaUno__label abajo">Razón Social</p>
               <p>La Gasolinera SA CV</p>
             </section>
-            <section class="columnaDos">
-              <p class="columnaDos__titulo">Conector</p>
-              <p class="columnaDos__titulo">Nombre</p>
-              <p class="columnaDos__titulo">Tarifa</p>
-              <img src="../../public/images/CCS2.png" alt="" />
-              <p>CCS2</p>
-              <p>$47/kWh</p>
-              <img src="../../public/images/CHAdeMO.png" alt="" />
-              <p>CHAdeMO</p>
-              <p>$210/h</p>
+            <section class="columnaUno">
+              <p class="columnaUno__label">Teléfono</p>
+              <p>5627722324</p>
+              <p class="columnaUno__label abajo">Correo Electronico</p>
+              <p>joseamm@comunidad.unam.mx</p>
             </section>
-            <section></section>
           </section>
         </section>
       </section>
-
-      <section class="tarjetas">
-        <section class="tarjetas__registrar">
-          <a href="./registrar_infraestructura.html">
-            <img src="../../public/images/gas_gold.svg" alt="" />
-            <p>Registrar Infraestructura</p>
-          </a>
+      <section class="tabla">
+        <section class="tabla__titulos"></section>
+        <section class="tabla__botones">
+          <section class="tabla__botones--filtro">
+            <p>Filtrar por:</p>
+            <select name="" id="filtrarAnual">
+              <option value="1" selected>2024</option>
+              <option value="2">2023</option>
+              <option value="3">2022</option>
+              <option value="4">2021</option>
+            </select>
+          </section>
+          <a href="./registrar_infraestructura.html">Registrar Infraestructura</a>
         </section>
-        <section class="tarjetas__actualizar">
-          <a href="./actualizar_infraestructura.html">
-            <img src="../../public/images/update_gold.svg" alt="" />
-            <p>Actualizar Infraestructura</p>
-          </a>
-        </section>
-        <section class="tarjetas__tarifa">
-          <a href="./actualizar_tarifa.html">
-            <img src="../../public/images/money_gold.svg" alt="" srcset="" />
-            <p>Actualizar Tarifa</p>
-          </a>
+        <section class="tabla__grid">
+          <table>
+            <thead>
+              <tr>
+                <th>ID</th>
+                <th>Nombre</th>
+                <th>Municipio</th>
+                <th>Editar</th>
+                <th>Tarifa</th>
+              </tr>
+            </thead>
+            <tbody id="2023">
+              <tr>
+                <td>1</td>
+                <td>La Electrolinera Durango</td>
+                <td>Alvaro Obregon</td>
+                <td><a href="./actualizar_infraestructura.html"><img src="../../public/images/edit_black.svg" alt="" srcset=""></a></td>
+                <td><a href="./actualizar_tarifa.html"><img src="../../public/images/money_black.svg" alt=""></a></td>
+              </tr>
+              <tr>
+                <td>2</td>
+                <td>La Electrolinera Durango</td>
+                <td>Alvaro Obregon</td>
+                <td><a href="./actualizar_infraestructura.html"><img src="../../public/images/edit_black.svg" alt="" srcset=""></a></td>
+                <td><a href="./actualizar_tarifa.html"><img src="../../public/images/money_black.svg" alt=""></a></td>
+              </tr>
+              <tr>
+                <td>3</td>
+                <td>La Electrolinera Durango</td>
+                <td>Alvaro Obregon</td>
+                <td><a href="./actualizar_infraestructura.html"><img src="../../public/images/edit_black.svg" alt="" srcset=""></a></td>
+                <td><a href="./actualizar_tarifa.html"><img src="../../public/images/money_black.svg" alt=""></a></td>
+              </tr>
+              <tr>
+                <td>4</td>
+                <td>La Electrolinera Durango</td>
+                <td>Alvaro Obregon</td>
+                <td><a href="./actualizar_infraestructura.html"><img src="../../public/images/edit_black.svg" alt="" srcset=""></a></td>
+                <td><a href="./actualizar_tarifa.html"><img src="../../public/images/money_black.svg" alt=""></a></td>
+              </tr>
+              <tr>
+                <td>5</td>
+                <td>La Electrolinera Durango</td>
+                <td>Alvaro Obregon</td>
+                <td><a href="./actualizar_infraestructura.html"><img src="../../public/images/edit_black.svg" alt="" srcset=""></a></td>
+                <td><a href="./actualizar_tarifa.html"><img src="../../public/images/money_black.svg" alt=""></a></td>
+              </tr>
+            </tbody>
+          </table>
         </section>
       </section>
     </main>
